grep: port better to Adélie GNU/Linux 64-bit ppc

Problem reported by A. Wilcox (Bug#29446).
* src/pcresearch.c (PCRE_EXTRA_MATCH_LIMIT_RECURSION)
(PCRE_STUDY_EXTRA_NEEDED): Default to 0.
(jit_exec): If we run up against the recursion limit,
double it (if possible) and try again.
(Pcompile): Also specify PCRE_STUDY_EXTRA_NEEDED so that
pc->extra is not null.